Initial FrontEnd SetUp

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 
 # dependencies #
 ###################
-/node_modules
+node_modules
 
 # testing #
 ###################
-/coverage
+coverage
 
 # Compiled source #
 ###################
