Disable security and enable cors

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,3 +3,9 @@ management.endpoints.web.exposure.include=*
 #spring.datasource.username=flowable
 #spring.datasource.password=flowable
 server.servlet.context-path=/simple
+
+
+security.ignored=/**
+spring.security.enabled=false
+management.security.enabled=false
+security.basic.enabled=false
